--- a/module/pom.xml
+++ b/module/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>user</module>
         <module>account</module>
+        <module>micro-service-base</module>
     </modules>
 
     <dependencies>
